maven-and-tests (#6)
* This change is a bit more because I had to relocate files root but what is request by the taske is donewhich means converta java code to use maven including usage of faker dependency

* Added fixes/improvements requested by Ian

* Added fix to deal with null exception

* build: convert to maven and add unit test

* Improved test method names and unnecessary mockito usage